Output a single chapter, using \includeonly.
* Place the \chapter commands in the respective files.

* Change the \input to \include. This allows the use of \includeonly,
keeping the ordering of the chapters intact.

* Update makefile to handle this new change.
The first run of pdflatex must generate all of the .aux files.
After this, \includeonly can be used to include the desired files.

--- a/introduction.tex
+++ b/introduction.tex
@@ -1,3 +1,6 @@
+\chapter{Introduction}
+
+
 \iffalse Brief outline of the chapter below
 
 Background:
@@ -94,6 +97,10 @@ As $k$ becomes larger, however, the matrix becomes indefinite and multigrid fail
 
 To handle the ill-conditioned system, a preconditioner can be used so that the problem may be more easily solved by numerical methods.
 Since multigrid is an effective solver for the Poisson problem, it is instead conceivable that few multigrid iterations could be used as a preconditioner for the Helmholtz problem.
+
+
+
+\section{Literature Review}
 
 
 
