--- a/multigrid.tex
+++ b/multigrid.tex
@@ -1,3 +1,6 @@
+\chapter{Multigrid}
+
+
 \section{Multigrid methods}
 
 Multigrid refers to a family of methods which use multiple grid levels in order to achieve high rates of convergence to solve linear systems.
