Add main page of oomph-lib to references.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -24,6 +24,12 @@
   note={Last accessed: 2018-05-10}
 }
 
+@misc{oomph, 
+  title={oomph-lib: Main Page}, 
+  url={http://oomph-lib.maths.man.ac.uk/doc/html/index.html},
+  note={Last accessed: 2018-08-12}
+}
+
 @book{hackbusch,
   title={Multi-Grid Methods and Applications},
   author={Hackbusch, W.},
