Add two new sources, fix indentation issues.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,69 +1,69 @@
 @book{sommerfeld,
-  title={Partial differential equations in physics},
-  author={Sommerfeld, Arnold},
-  volume={1},
-  year={1949},
-  publisher={Academic press}
+	title={Partial differential equations in physics},
+	author={Sommerfeld, Arnold},
+	volume={1},
+	year={1949},
+	publisher={Academic press}
 }
 
 @book{leveque,
-  title={Finite Difference Methods for Ordinary and Partial Differential Equations: Steady-State and Time-Dependent Problems},
-  author={LeVeque, R.J.},
-  isbn={9780898717839},
-  lccn={2007061732},
-  series={Other Titles in Applied Mathematics},
-  url={https://books.google.co.uk/books?id=lZysESfSWwgC},
-  year={2007},
-  publisher={Society for Industrial and Applied Mathematics (SIAM, 3600 Market Street, Floor 6, Philadelphia, PA 19104)}
+	title={Finite Difference Methods for Ordinary and Partial Differential Equations: Steady-State and Time-Dependent Problems},
+	author={LeVeque, R.J.},
+	isbn={9780898717839},
+	lccn={2007061732},
+	series={Other Titles in Applied Mathematics},
+	url={https://books.google.co.uk/books?id=lZysESfSWwgC},
+	year={2007},
+	publisher={Society for Industrial and Applied Mathematics (SIAM, 3600 Market Street, Floor 6, Philadelphia, PA 19104)}
 }
 
 @misc{oomph_hh, 
-  title={Theory: The Helmholtz equation for time-harmonic scattering problems}, 
-  url={http://oomph-lib.maths.man.ac.uk/doc/helmholtz/scattering/html/index.html}, 
-  journal={oomph-lib: Example problem: The Helmholtz equation -- scattering problems},
-  note={Last accessed: 2018-05-10}
+	title={Theory: The Helmholtz equation for time-harmonic scattering problems}, 
+	url={http://oomph-lib.maths.man.ac.uk/doc/helmholtz/scattering/html/index.html}, 
+	journal={oomph-lib: Example problem: The Helmholtz equation -- scattering problems},
+	note={Last accessed: 2018-05-10}
 }
 
 @misc{oomph, 
-  title={oomph-lib: Main Page}, 
-  url={http://oomph-lib.maths.man.ac.uk/doc/html/index.html},
-  note={Last accessed: 2018-08-12}
+	title={oomph-lib: Main Page}, 
+	url={http://oomph-lib.maths.man.ac.uk/doc/html/index.html},
+	note={Last accessed: 2018-08-12}
 }
 
 @book{hackbusch,
-  title={Multi-Grid Methods and Applications},
-  author={Hackbusch, W.},
-  isbn={9783540127611},
-  lccn={85014845},
-  series={Springer Series in Computational Mathematics},
-  url={https://books.google.co.uk/books?id=J0DvAAAAMAAJ},
-  year={2003},
-  publisher={Springer Berlin Heidelberg}
+	title={Multi-Grid Methods and Applications},
+	author={Hackbusch, W.},
+	isbn={9783540127611},
+	lccn={85014845},
+	series={Springer Series in Computational Mathematics},
+	url={https://books.google.co.uk/books?id=J0DvAAAAMAAJ},
+	year={2003},
+	publisher={Springer Berlin Heidelberg}
 }
 
 @book{briggs,
-  title={A Multigrid Tutorial: Second Edition},
-  author={Briggs, W.L. and Henson, V.E. and McCormick, S.F.},
-  isbn={9780898714623},
-  lccn={87062333},
-  series={Other Titles in Applied Mathematics},
-  url={https://books.google.co.uk/books?id=oSTGBm64o1AC},
-  year={2000},
-  publisher={Society for Industrial and Applied Mathematics}
+	title={A Multigrid Tutorial: Second Edition},
+	author={Briggs, W.L. and Henson, V.E. and McCormick, S.F.},
+	isbn={9780898714623},
+	lccn={87062333},
+	series={Other Titles in Applied Mathematics},
+	url={https://books.google.co.uk/books?id=oSTGBm64o1AC},
+	year={2000},
+	publisher={Society for Industrial and Applied Mathematics}
 }
 
 @article{iyengar,
-title = "A note on multigrid for the three-dimensional Poisson equation in cylindrical coordinates",
-journal = "Journal of Computational and Applied Mathematics",
-volume = "33",
-number = "2",
-pages = "163 - 169",
-year = "1990",
-issn = "0377-0427",
-doi = "https://doi.org/10.1016/0377-0427(90)90366-8",
-url = "http://www.sciencedirect.com/science/article/pii/0377042790903668",
-author = "Satteluri R.K. Iyengar and Anu Goyal",
-keywords = "Multigrid, defect correction, prolongation, restriction"
+	title = "A note on multigrid for the three-dimensional Poisson equation in cylindrical coordinates",
+	journal = "Journal of Computational and Applied Mathematics",
+	volume = "33",
+	number = "2",
+	pages = "163 - 169",
+	year = "1990",
+	issn = "0377-0427",
+	doi = "https://doi.org/10.1016/0377-0427(90)90366-8",
+	url = "http://www.sciencedirect.com/science/article/pii/0377042790903668",
+	author = "Satteluri R.K. Iyengar and Anu Goyal",
+	keywords = "Multigrid, defect correction, prolongation, restriction"
 }
 
 @misc{volker,
@@ -74,51 +74,50 @@ keywords = "Multigrid, defect correction, prolongation, restriction"
 }
 
 @article{fgmres,
-author = {Saad, Y.},
-title = {A Flexible Inner-Outer Preconditioned GMRES Algorithm},
-journal = {SIAM Journal on Scientific Computing},
-volume = {14},
-number = {2},
-pages = {461-469},
-year = {1993},
-doi = {10.1137/0914028},
-
-URL = { 
-        https://doi.org/10.1137/0914028
-    
-},
-eprint = { 
-        https://doi.org/10.1137/0914028
-    
+	author = {Saad, Y.},
+	title = {A Flexible Inner-Outer Preconditioned GMRES Algorithm},
+	journal = {SIAM Journal on Scientific Computing},
+	volume = {14},
+	number = {2},
+	pages = {461-469},
+	year = {1993},
+	doi = {10.1137/0914028},
+	URL = {https://doi.org/10.1137/0914028},
+	eprint = {https://doi.org/10.1137/0914028}
 }
-
-}
-
-
-
-
-
-
 
 @article{elman,
-author = {Elman, H. and Ernst, O. and O'Leary, D.},
-title = {A Multigrid Method Enhanced by Krylov Subspace Iteration for Discrete Helmholtz Equations},
-journal = {SIAM Journal on Scientific Computing},
-volume = {23},
-number = {4},
-pages = {1291-1315},
-year = {2001},
-doi = {10.1137/S1064827501357190},
-
-URL = { 
-        https://doi.org/10.1137/S1064827501357190
-    
-},
-eprint = { 
-        https://doi.org/10.1137/S1064827501357190
-    
+	author = {Elman, H. and Ernst, O. and O'Leary, D.},
+	title = {A Multigrid Method Enhanced by Krylov Subspace Iteration for Discrete Helmholtz Equations},
+	journal = {SIAM Journal on Scientific Computing},
+	volume = {23},
+	number = {4},
+	pages = {1291-1315},
+	year = {2001},
+	doi = {10.1137/S1064827501357190},
+	URL = {https://doi.org/10.1137/S1064827501357190},
+	eprint = {https://doi.org/10.1137/S1064827501357190}
 }
 
+@book{wesseling,
+  title={An Introduction to Multigrid Methods},
+  author={Wesseling, P.},
+  isbn={9781930217089},
+  lccn={91024430},
+  series={An Introduction to Multigrid Methods},
+  url={https://books.google.co.uk/books?id=RoRGAAAAYAAJ},
+  year={2004},
+  publisher={R.T. Edwards}
 }
 
-
+@article{fedorenko,
+  author={R P Fedorenko},
+  title={ITERATIVE METHODS FOR ELLIPTIC DIFFERENCE EQUATIONS},
+  journal={Russian Mathematical Surveys},
+  volume={28},
+  number={2},
+  pages={129},
+  url={http://stacks.iop.org/0036-0279/28/i=2/a=R05},
+  year={1973},
+  abstract={CONTENTS § 1. Introduction § 2. Statement of the problem; basic notation § 3. The simplest iterative methods § 4. Richardson's method § 5. Young's method § 6. The method of alternating direction § 7. The choice of the optimal sequence of iteration parameters. Wachspress's theory § 8. Further development of the alternating direction method § 9. The relaxation method § 10. The minimal residuals method Appendix References}
+}
