Add new references.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -121,3 +121,44 @@
   year={1973},
   abstract={CONTENTS § 1. Introduction § 2. Statement of the problem; basic notation § 3. The simplest iterative methods § 4. Richardson's method § 5. Young's method § 6. The method of alternating direction § 7. The choice of the optimal sequence of iteration parameters. Wachspress's theory § 8. Further development of the alternating direction method § 9. The relaxation method § 10. The minimal residuals method Appendix References}
 }
+
+@article{cslp1,
+	title = "On a class of preconditioners for solving the Helmholtz equation",
+	journal = "Applied Numerical Mathematics",
+	volume = "50",
+	number = "3",
+	pages = "409 - 425",
+	year = "2004",
+	issn = "0168-9274",
+	doi = "https://doi.org/10.1016/j.apnum.2004.01.009",
+	url = "http://www.sciencedirect.com/science/article/pii/S0168927404000091",
+	author = "Y.A Erlangga and C Vuik and C.W Oosterlee",
+	keywords = "Helmholtz equation, Krylov subspace, Preconditioner"
+}
+
+@article{cslp2,
+	author = {Erlangga, Y. and Oosterlee, C. and Vuik, C.},
+	title = {A Novel Multigrid Based Preconditioner For Heterogeneous Helmholtz Problems},
+	journal = {SIAM Journal on Scientific Computing},
+	volume = {27},
+	number = {4},
+	pages = {1471-1492},
+	year = {2006},
+	doi = {10.1137/040615195},
+	URL = {https://doi.org/10.1137/040615195},
+	eprint = {https://doi.org/10.1137/040615195}
+}
+
+@article{bermudez,
+	title = "An optimal perfectly matched layer with unbounded absorbing function for time-harmonic acoustic scattering problems",
+	journal = "Journal of Computational Physics",
+	volume = "223",
+	number = "2",
+	pages = "469 - 488",
+	year = "2007",
+	issn = "0021-9991",
+	doi = "https://doi.org/10.1016/j.jcp.2006.09.018",
+	url = "http://www.sciencedirect.com/science/article/pii/S0021999106004487",
+	author = "A. Bermúdez and L. Hervella-Nieto and A. Prieto and R. Rodrı´guez",
+	keywords = "Perfectly matched layer, Time-harmonic scattering, Helmholtz equation, Finite element method"
+}
